refactor : DTO Builder 패턴 제거 및 정적 팩토리 메소드 적용